RESOLVED FIXED 259631
Out-of-flow <br> should not trigger a line break
https://bugs.webkit.org/show_bug.cgi?id=259631
Summary Out-of-flow <br> should not trigger a line break
Attachments
Patch (14.79 KB, patch)
2023-07-29 16:24 PDT, zalan
no flags
Patch (23.60 KB, patch)
2023-07-29 21:40 PDT, zalan
no flags
Patch (7.19 KB, patch)
2023-07-30 21:09 PDT, zalan
no flags
zalan
Comment 1 2023-07-29 16:24:02 PDT
Tim Nguyen (:ntim)
Comment 2 2023-07-29 21:32:20 PDT
Comment on attachment 467157 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=467157&action=review > LayoutTests/fast/inline/out-of-flow-forced-line-break.html:1 > +<style> Would be a really good WPT especially if browsers disagree here.
zalan
Comment 3 2023-07-29 21:40:22 PDT
zalan
Comment 4 2023-07-30 21:09:11 PDT
zalan
Comment 5 2023-08-01 07:28:58 PDT
alternatively we could just create a generic RenderBox for such out-of-flow line breaks so that we don't have to promote RenderLineBreak to a RenderBox subclass.
zalan
Comment 6 2023-08-01 07:29:36 PDT
(though most of this patch would still be needed)
zalan
Comment 7 2023-08-01 07:31:08 PDT
(In reply to Tim Nguyen (:ntim) from comment #2) > Comment on attachment 467157 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=467157&action=review > > > LayoutTests/fast/inline/out-of-flow-forced-line-break.html:1 > > +<style> > > Would be a really good WPT especially if browsers disagree here. agree. we would still fail slightly more involved WPT tests though.
EWS
Comment 8 2023-08-01 08:23:20 PDT
Committed 266475@main (f71ea9e98639): <https://commits.webkit.org/266475@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467159 [details].
Radar WebKit Bug Importer
Comment 9 2023-08-01 08:24:19 PDT
Note You need to log in before you can comment on or make changes to this bug.