Out-of-flow <br> should not trigger a line break https://bugs.webkit.org/show_bug.cgi?id=259631

Reviewed by Antti Koivisto.

This is just to make sure we don't include out-of-flow line break in inflow inline layout
producing forced line break at such boxes.
However this patch does not address the incorrect offsetTop/left/client rect etc values.
(In order to support a full-fledged out-of-flow line break, we would need to inherit RenderLineBreak from RenderBox
which is quite a memory waste considering RenderLineBreak is in-flow most of the time -also, it would require some involved changes as
currently some code assumes that RenderLineBreak is never a RenderBox.)

* LayoutTests/fast/inline/out-of-flow-forced-line-break-expected.html: Added.
* LayoutTests/fast/inline/out-of-flow-forced-line-break.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::InlineItemsBuilder::collectInlineItems):
* Source/WebCore/layout/integration/LayoutIntegrationBoxTree.cpp:
(WebCore::LayoutIntegration::BoxTree::adjustStyleIfNeeded):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::updateLineBreakBoxDimensions):
(WebCore::LayoutIntegration::LineLayout::updateRenderTreePositions):

Canonical link: https://commits.webkit.org/266475@main